[gd_scene load_steps=15 format=3 uid="uid://c4hrkrysob3p8"]

[ext_resource type="Texture2D" uid="uid://btmw4o4rdp3dg" path="res://Aset/Background/PNG/Cartoon_Forest_BG_01/Layers/BG_Decor.png" id="1_1bvp3"]
[ext_resource type="Script" uid="uid://g4i60rptoifh" path="res://main.gd" id="1_5vw27"]
[ext_resource type="Texture2D" uid="uid://c6pkg50gn71yh" path="res://Aset/Background/PNG/Cartoon_Forest_BG_01/Layers/Sky.png" id="1_272bh"]
[ext_resource type="Texture2D" uid="uid://dpuxcdskc2nx3" path="res://Aset/Background/PNG/Cartoon_Forest_BG_01/Layers/Foreground.png" id="2_lquwl"]
[ext_resource type="Texture2D" uid="uid://b826xcapvr82" path="res://Aset/Background/PNG/Cartoon_Forest_BG_01/Layers/Middle_Decor.png" id="3_5vw27"]
[ext_resource type="Texture2D" uid="uid://dgmifuknudp3c" path="res://Aset/Object and Tree/PNG/jungle_tree_11.png" id="6_4c57u"]
[ext_resource type="PackedScene" uid="uid://hcl03xxdhybu" path="res://platform.tscn" id="8_efxa6"]
[ext_resource type="Script" uid="uid://cxjifgnesr6q1" path="res://health_ui.gd" id="9_kek77"]
[ext_resource type="Texture2D" uid="uid://omlolffkopa5" path="res://Aset/Object and Tree/PNG/Objects_separated/Assets_no_shadow/Mushrooms1.png" id="10_efxa6"]
[ext_resource type="PackedScene" uid="uid://dxm32114wr42o" path="res://enemy.tscn" id="11_dg77c"]
[ext_resource type="PackedScene" uid="uid://dtiak8l3exq3i" path="res://Character/player.tscn" id="11_efxa6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4c57u"]
size = Vector2(23.0064, 17.3185)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4c57u"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efxa6"]
bg_color = Color(0.882353, 0.290196, 0.290196, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_5vw27")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(162.111, 318.313)
scale = Vector2(0.721, 0.721)
texture = ExtResource("1_272bh")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(162.111, 318.313)
scale = Vector2(0.721, 0.721)
texture = ExtResource("1_1bvp3")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(0, 3)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(162.111, 318.313)
scale = Vector2(0.721, 0.721)
texture = ExtResource("3_5vw27")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(0, 3)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(162.111, 318.313)
scale = Vector2(0.721, 0.721)
texture = ExtResource("2_lquwl")

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(1545, 318)
scale = Vector2(0.721, 0.721)
texture = ExtResource("2_lquwl")

[node name="Sprite2D3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(2929, 318)
scale = Vector2(0.721, 0.721)
texture = ExtResource("2_lquwl")

[node name="Sprite2D4" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(4313, 318)
scale = Vector2(0.721, 0.721)
texture = ExtResource("2_lquwl")

[node name="Sprite2D5" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(5697, 318)
scale = Vector2(0.721, 0.721)
texture = ExtResource("2_lquwl")

[node name="Sprite2D6" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(7081, 318)
scale = Vector2(0.721, 0.721)
texture = ExtResource("2_lquwl")

[node name="Sprite2D7" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(8465, 318)
scale = Vector2(0.721, 0.721)
texture = ExtResource("2_lquwl")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-209, 1)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(1723.18, -158.879)
scale = Vector2(4.54331, 1.34323)
polygon = PackedVector2Array(-450, 640, 1682.21, 636.435, 148.09, 638.669)

[node name="JungleTree11" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(1022, 584)
scale = Vector2(2.1369, 2.59615)
texture = ExtResource("6_4c57u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1018, 592)
scale = Vector2(1.84524, 2.59615)
shape = SubResource("RectangleShape2D_4c57u")

[node name="Mushrooms1" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(1050, 594)
scale = Vector2(0.921875, 0.890625)
texture = ExtResource("10_efxa6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_kek77")

[node name="HealthBar" type="Control" parent="CanvasLayer/HealthUI"]
layout_mode = 3
anchors_preset = 0
offset_left = -401.0
offset_top = 25.0
offset_right = -201.0
offset_bottom = 55.0

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/HealthUI/HealthBar"]
layout_mode = 0
offset_right = 180.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0.882353, 0.290196, 0.290196, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_4c57u")
theme_override_styles/fill = SubResource("StyleBoxFlat_efxa6")
value = 100.0
show_percentage = false

[node name="HealthText" type="Label" parent="CanvasLayer"]
offset_left = -344.0
offset_top = 27.0
offset_right = -282.0
offset_bottom = 50.0
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthIcon" type="TextureRect" parent="CanvasLayer"]
offset_left = -401.0
offset_top = 25.0
offset_right = -361.0
offset_bottom = 65.0

[node name="Platform" parent="." instance=ExtResource("8_efxa6")]
position = Vector2(-2, -2)

[node name="Enemy" parent="." instance=ExtResource("11_dg77c")]
position = Vector2(1158, 235)

[node name="Player" parent="." instance=ExtResource("11_efxa6")]
position = Vector2(330, 374)
